fix: dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
-	--background: #ffffff;
-	--foreground: #171717;
+	--background: #0a0a0a;
+	--foreground: #ededed;
 	--button-padding: 1.5vh 1.1vh;
 	--button-font-size: 2.5vh;
 	--button-border-radius: 4vh;
@@ -12,17 +12,11 @@
 	--hover-text-color: rgb(255, 255, 255);
 }
 
-@media (prefers-color-scheme: dark) {
-	:root {
-		--background: #0a0a0a;
-		--foreground: #ededed;
-	}
-}
-
 html {
 	scroll-behavior: smooth;
 	scroll-snap-type: y mandatory;
 	overflow-x: hidden;
+	color-scheme: dark;
 }
 
 body {
@@ -44,10 +38,4 @@ body {
 a {
 	color: inherit;
 	text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-	html {
-		color-scheme: dark;
-	}
 }
